--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -1,24 +1,32 @@
 ---
 pageable: true
-per_page: 10
+per_page: 5
 ---
-- if paginate && num_pages > 1
-  p
-    | Page 
-    == page_number
-    | of 
-    == num_pages
 
-  - if prev_page
-    p == link_to 'Previous page', prev_page
-
-- page_articles.each_with_index do |article, i|
-  h2
-    == link_to article.title, article
-    span
-      == article.date.strftime('%b %e')
-  == article.body
+#articles.articles
+  - page_articles.each_with_index do |article, i|
+    article
+      h2 = link_to article.title, article
+      time = article.date.strftime('%Y.%m.%d')
+      p.txt = strip_tags article.summary
 
 - if paginate
-  - if next_page
-    p == link_to 'Next page', next_page
+  .pagenate
+    - if prev_page
+      .prev
+        = link_to "<span class='icon-left'></span>", prev_page
+          
+
+    .pages
+      - pages = 1..num_pages
+      - pages.each do |num|
+        - if num == page_number
+          .page.current = num
+        - elsif num == 1
+          .page = link_to num, "/"
+        - else
+          .page = link_to num, "/page/#{num}"
+
+    - if next_page
+      .next
+        = link_to "<span class='icon-right'></span>", next_page
