--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -24,7 +24,7 @@ html lang="ja"
 
     == stylesheet_link_tag "style"
     == javascript_include_tag "all"
-    script type="text/javascript" src="//typesquare.com/accessor/script/typesquare.js?xVSRN9-Pcws%3D" charset="utf-8"
+    / script type="text/javascript" src="//typesquare.com/accessor/script/typesquare.js?xVSRN9-Pcws%3D" charset="utf-8"
 
     / == feed_tag :atom, "#{blog.options.prefix.to_s}/feed.xml", title: "Atom Feed"
 
