--- a/source/stylesheets/style.css.sass
+++ b/source/stylesheets/style.css.sass
@@ -26,14 +26,18 @@ header
   position: relative
 
   .logo
-    width: 126px
-    height: 112px
+    width: 100px
+    height: 90px
     position: absolute
     top: -20px
     left: 0
-    right: -10px
+    right: -5px
     bottom: 0
     margin: auto
+
+    img
+      width: 100px
+      height: 90px
 
   nav
     .icon-nav
@@ -67,8 +71,9 @@ header
       
       h2
         font-size: 20px
-        font-family: "見出ゴMB1", "Midashi Go MB1", sans-serif
-        margin-bottom: 50px
+        font-family: "A-OTF 見出ゴMB31 Pro"
+        //font-family: "見出ゴMB1", "Midashi Go MB1", sans-serif
+        margin-bottom: 40px
 
       time
         font-size: 11px
@@ -82,7 +87,6 @@ header
         line-height: 2
         text-align: justify
         margin: -13px 0
-
 
   .pagenate
     margin: -15px 0 150 - 15px
