--- a/source/stylesheets/style.css.sass
+++ b/source/stylesheets/style.css.sass
@@ -1,155 +1,10 @@
 @charset "utf-8"
 
-@import lib/reset.min.css
-@import lib/font.css
-@import mixin.sass
+@import lib/reset.min
+@import lib/font
+@import mixin
+@import variable
 
-html,
-body
-  height: 100%
-
-body
-  color: $black
-  font-size: 13px
-  font-family: "Helvetica Neue", Helvetica, "游ゴシック", YuGothic, "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, sans-serif
-  background: $gray
-
-a
-  color: $black
-  text-decoration: none
-
-
-header
-  @include border-box
-  width: 100%
-  height: 100%
-  position: relative
-
-  .logo
-    width: 100px
-    height: 90px
-    position: absolute
-    top: -20px
-    left: 0
-    right: -5px
-    bottom: 0
-    margin: auto
-
-    img
-      width: 100px
-      height: 90px
-
-  nav
-    .icon-nav
-      font-size: 18px
-      text-align: center
-      line-height: 30px
-      width: 30px
-      height: 30px
-      position: fixed
-      top: 40 - 7px
-      right: 40 - 7px
-      cursor: pointer
-
-    ul
-      display: none
-
-.main
-  @include border-box
-  width: 100%
-  max-width: 800 + 30 * 2px
-  margin: 0 auto
-  padding: 0 30px
-
-  .articles
-    margin-bottom: 150px
-
-    article
-      position: relative
-      padding-top: 25px
-      margin-bottom: 100px
-      
-      h2
-        font-size: 20px
-        font-family: "A-OTF 見出ゴMB31 Pro"
-        //font-family: "見出ゴMB1", "Midashi Go MB1", sans-serif
-        margin-bottom: 40px
-
-      time
-        font-size: 11px
-        letter-spacing: 0.1em
-        position: absolute
-        top: 0
-        left: 2px
-
-      .txt
-        font-size: 13px
-        line-height: 2
-        text-align: justify
-        margin: -13px 0
-
-  .pagenate
-    margin: -15px 0 150 - 15px
-    position: relative
-
-    .pages
-      text-align: center
-    
-      .page
-        font-size: 11px
-        text-align: center
-        line-height: 30px
-        width: 30px
-        height: 30px
-        margin-right: 40 - 30px
-        position: relative
-        display: inline-block
-
-        a
-          width: 30px
-          height: 30px
-          display: block
-        
-        &.current:after
-          content: ""
-          width: 7px
-          height: 1px
-          background: $black
-          position: absolute
-          bottom: 0
-          left: 11px
-          display: block
-
-        &:last-child
-          margin-right: 0
-     
-    .prev,
-    .next
-      font-size: 11px
-      text-align: center
-      line-height: 30px
-      position: absolute
-      top: 0
-
-      a
-        width: 30px
-        height: 30px
-        display: block
-
-    .prev
-      left: -10px
-
-    .next
-      right: -10px
-
-
-  footer
-    margin-bottom: 150px
-    
-    .copyright
-      font-size: 9px
-      text-align: center
-      letter-spacing: 0.1em
-      
-
-
+@import layout
+@import index
+@import blog
