--- a/source/stylesheets/_index.sass
+++ b/source/stylesheets/_index.sass
@@ -21,62 +21,64 @@
         width: 100px
         height: 90px
 
-.container
-  .articles
-    margin-bottom: 150px
+.index,
+.page
+  .container
+    .articles
+      margin-bottom: 150px
 
-    .article
-      margin-bottom: 100px
-      padding-top: 23px
+      .article
+        margin-bottom: 100px
+        padding-top: 11 + 12px
+        position: relative
+       
+        .title
+          font-size: 20px
+          font-family: "A-OTF 見出ゴMB31 Pro", sans-serif
+          font-weight: bold
+          //font-family: "見出ゴMB1", "Midashi Go MB1", sans-serif
+          margin-bottom: 40px
+
+        .date
+          font-size: 11px
+          letter-spacing: 0.1em
+          position: absolute
+          top: 0
+          left: 2px
+
+        .txt
+          font-size: 13px
+          line-height: 2
+          text-align: justify
+          margin: -6px 0
+
+    .pagenate
+      margin-bottom: 150px
       position: relative
-     
-      .title
-        font-size: 20px
-        font-family: "A-OTF 見出ゴMB31 Pro", sans-serif
-        font-weight: bold
-        //font-family: "見出ゴMB1", "Midashi Go MB1", sans-serif
-        margin-bottom: 40px
 
-      .date
+      .page
         font-size: 11px
-        letter-spacing: 0.1em
+        text-align: center
+        letter-spacing: 0.2em
+       
+      .prev,
+      .next
+        font-size: 11px
+        text-align: center
+        line-height: 40px
         position: absolute
-        top: 0
-        left: 2px
+        top: -14px
 
-      .txt
-        font-size: 13px
-        line-height: 2
-        text-align: justify
-        margin: -13px 0
+        a
+          width: 40px
+          height: 40px
+          display: block
 
-  .pagenate
-    margin-bottom: 150px
-    position: relative
+      .prev
+        left: -16px
 
-    .page
-      font-size: 11px
-      text-align: center
-      letter-spacing: 0.2em
-     
-    .prev,
-    .next
-      font-size: 11px
-      text-align: center
-      line-height: 40px
-      position: absolute
-      top: -14px
-
-      a
-        width: 40px
-        height: 40px
-        display: block
-
-    .prev
-      left: -16px
-
-    .next
-      right: -16px
+      .next
+        right: -16px
 
 
 +mediaquery-sp
@@ -92,21 +94,23 @@
           width: 68px
           height: 60px
 
-  .container
-    .articles
-      margin-bottom: 100px
+  .index,
+  .page
+    .container
+      .articles
+        margin-bottom: 100px
 
-      .article
-        margin-bottom: 75px
+        .article
+          margin-bottom: 60px
 
-        .date
-          font-size: 10px
+          .date
+            font-size: 10px
 
-        .title
-          font-size: 18px
+          .title
+            font-size: 18px
 
-        .txt
-          font-size: 12px
+          .txt
+            font-size: 12px
 
-    .pagenate
-      margin-bottom: 100px
+      .pagenate
+        margin-bottom: 100px
