--- a/source/layouts/blog.slim
+++ b/source/layouts/blog.slim
@@ -3,9 +3,9 @@ html lang="ja"
   head
     meta charset="utf-8"
     meta http-equiv="Content-Language" content="ja"
-    
+
     title
-      == current_article.title + ' - ' unless current_article.nil?
+      == current_article.title + ' | ' unless current_article.nil?
       | 誠
 
     meta name="keywords" content=""
@@ -41,5 +41,24 @@ html lang="ja"
         h2.title = current_article.title
         time.date = current_article.date.strftime('%Y.%m.%d')
         = yield
+
+      .share
+        .twitter
+          erb:
+            <a href="https://twitter.com/share" class="twitter-share-button" data-via="310u8" data-lang="ja" data-count="none">ツイート</a><script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+        .facebook
+          erb:
+            <div id="fb-root"></div>
+            <script>(function(d, s, id) {
+              var js, fjs = d.getElementsByTagName(s)[0];
+              if (d.getElementById(id)) return;
+              js = d.createElement(s); js.id = id;
+              js.src = "//connect.facebook.net/ja_JP/sdk.js#xfbml=1&appId=348456995219440&version=v2.0";
+              fjs.parentNode.insertBefore(js, fjs);
+            }(document, 'script', 'facebook-jssdk'));</script>
+            <div class="fb-like" data-href="http://www.daisukenagai.com/blog/<%= current_article.slug %>" data-layout="button" data-action="like" data-show-faces="false" data-share="false"></div>
+        .hatena
+          erb:
+            <a href="http://b.hatena.ne.jp/entry/www.daisukenagai.com/blog/<%= current_article.slug %>" class="hatena-bookmark-button" data-hatena-bookmark-title="<%= current_article.title %>" data-hatena-bookmark-layout="simple" data-hatena-bookmark-lang="ja" title="このエントリーをはてなブックマークに追加"><img src="http://b.st-hatena.com/images/entry-button/button-only@2x.png" alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;" /></a><script type="text/javascript" src="http://b.st-hatena.com/js/bookmark_button.js" charset="utf-8" async="async"></script>
     
     = partial "layouts/footer"
