--- a/source/stylesheets/_layout.sass
+++ b/source/stylesheets/_layout.sass
@@ -34,13 +34,13 @@ a
 .blog
   .header
     @include container
-    height: 280px
-    padding-top: 96px
+    height: 250px
+    padding-top: 90px
 
     .logo
       img
-        width: 66px
-        height: 58px
+        width: 56px
+        height: 50px
 
 .container
   @include container
@@ -50,7 +50,7 @@ a
   padding-bottom: 150px
   
   .copyright
-    font-size: 8px
+    font-size: 9px
     text-align: center
     letter-spacing: 0.1em
 
@@ -59,22 +59,28 @@ a
     .nav
       .icon-nav
         font-size: 16px
-        top: 30 - 10px
+        top: 33 - 10px
         right: 30 - 12px
-
-  .page,
-  .blog
-    .header
-      height: 200px
-      padding: 75px 30px 0
-
-      .logo
-        img
-          width: 39px
-          height: 35px
 
   .container
     padding: 0 30px
 
   .footer
     padding-bottom: 100px
+
+    .copyright
+      font-size: 8px
+
+  .page,
+  .blog
+    .header
+      height: 90px
+      padding: 28px 30px 0
+
+      .logo
+        img
+          width: 34px
+          height: 30px
+
+    .container
+      margin-top: 30px
