--- a/source/stylesheets/_blog.sass
+++ b/source/stylesheets/_blog.sass
@@ -34,19 +34,22 @@
 
       h3
         font-size: 18px
+        line-height: 1.5
         font-weight: bold
-        margin: 80px 0 40px
+        margin: 80 - 5px 0 40 - 5px
+
+      p + h3
+        margin-top: 80 - 5 - 8px
 
       p
         font-size: 13px
         line-height: 2
         text-align: justify
-        margin: -6px 0 40 - 6px
+        margin: -8px 0 40 - 8px
 
       img
         width: 100%
-        margin-bottom: 40px
-        padding: 6px 0
+        padding: 8px 0 10px
         display: block
 
       a
@@ -57,7 +60,7 @@
 
       ul,
       ol
-        margin-bottom: 40px
+        margin-bottom: 40 - 2px
 
         li
           margin-bottom: 10px
@@ -99,7 +102,7 @@
         border: none
 
       .twitter-tweet
-        margin-bottom: 40px !important
+        margin-bottom: 45px !important
       
     .share
       text-align: center
@@ -140,31 +143,22 @@
           font-size: 11px
 
         h3
-          margin: 60px 0 30px
+          margin: 60 - 5px 0 40 - 5px
+
+        p + h3
+          margin-top: 60 - 5 - 8px
 
         p
-          margin-bottom: 30 - 6px
-
-        img
-          margin-bottom: 30px
-
-        ul,
-        ol
-          margin-bottom: 30px
+          margin-bottom: 40 - 8px
 
         blockquote
-          margin-bottom: 30px
           padding: 20px
 
         pre
-          margin-bottom: 30px
           padding: 20px
 
         hr
-          margin-bottom: 30px
-
-        .twitter-tweet
-          margin-bottom: 30px !important
+          margin-bottom: 20px
 
       .share
         margin-bottom: 100px
