--- a/source/stylesheets/_mixin.sass
+++ b/source/stylesheets/_mixin.sass
@@ -26,3 +26,12 @@
   max-width: 800 + 40 * 2px
   margin: 0 auto
   padding: 0 40px
+
+=hover
+  transition: opacity 0.5s cubic-bezier(0.165, 0.84, 0.44, 1)
+  opacity: 1
+
+  &:hover
+    transition: opacity 0.1s cubic-bezier(0.165, 0.84, 0.44, 1)
+    opacity: 0.25
+    
