--- a/source/layouts/header.slim
+++ b/source/layouts/header.slim
@@ -1,11 +1,17 @@
 header.header
   h1.logo
-    = link_to "/"
+    - unless page_classes == "index"
+      = link_to "/"
+        = image_tag "logo.png", :alt => "誠"
+    - else
       = image_tag "logo.png", :alt => "誠"
 
-  nav.nav
-    span.icon-nav
-    ul
-      li hoge
-      li fuga
-      li piyo
+nav.nav
+  span.icon.icon-nav
+  ul.list
+    li =link_to "all", "/"
+    li =link_to "web", "/"
+    li =link_to "design", "/"
+    li =link_to "music", "/"
+    li =link_to "etc", "/"
+    li =link_to "about", "/"
