--- a/source/stylesheets/_index.sass
+++ b/source/stylesheets/_index.sass
@@ -1,5 +1,11 @@
 @charset "utf-8"
 
+@keyframes logo
+  0%
+    opacity: 0
+  100%
+    opacity: 1
+
 .index
   .header
     +border-box
@@ -17,12 +23,11 @@
       bottom: 0
       margin: auto
 
-      a
-        +hover
-
-        img
-          width: 100px
-          height: 90px
+      img
+        width: 100px
+        height: 90px
+        opacity: 0
+        animation: logo 2s $easeOutSine 1s forwards
 
 .index,
 .page
