--- a/source/stylesheets/_mixin.sass
+++ b/source/stylesheets/_mixin.sass
@@ -1,5 +1,9 @@
 @charset "utf-8"
 
+=mediaquery-pc
+  @media only screen and (min-width: 481px)
+    @content
+
 =mediaquery-sp
   @media only screen and (max-width: 480px)
     @content
@@ -28,10 +32,11 @@
   padding: 0 40px
 
 =hover
-  transition: opacity 0.5s cubic-bezier(0.165, 0.84, 0.44, 1)
-  opacity: 1
+  +mediaquery-pc
+    transition: opacity 0.5s $easeOutQuart
+    opacity: 1
 
-  &:hover
-    transition: opacity 0.1s cubic-bezier(0.165, 0.84, 0.44, 1)
-    opacity: 0.25
+    &:hover
+      transition: opacity 0.1s $easeOutQuart
+      opacity: 0.25
     
