--- a/source/stylesheets/_blog.sass
+++ b/source/stylesheets/_blog.sass
@@ -91,11 +91,12 @@
       pre
         background: $gray
         margin-bottom: 40px
-        padding: 40px
+        border: none
+        padding: 40 - 6px 40px
         overflow: scroll
 
         code
-          line-height: 1.25
+          line-height: 1.5
 
       hr
         margin: 0 0 40px
@@ -162,6 +163,7 @@
 
       .share
         margin-bottom: 100px
+        display: none
 
         .twitter
           top: 0
