--- a/source/stylesheets/_layout.sass
+++ b/source/stylesheets/_layout.sass
@@ -41,7 +41,6 @@ a
     cursor: pointer
 
   .list
-    +border-box
     width: 100%
     height: 100%
     background: $light-gray-opacity
@@ -50,6 +49,7 @@ a
     top: 0
     right: 0
     z-index: 0
+    box-sizing: border-box
     display: none
 
     li
