バグってた

--- a/source/stylesheets/_mixin.sass
+++ b/source/stylesheets/_mixin.sass
@@ -21,7 +21,7 @@
   margin: 0 auto
 
 =container
-  +border-box
+  box-sizing: border-box
   width: 100%
   max-width: 800 + 40 * 2px
   margin: 0 auto
