--- a/source/layouts/header.slim
+++ b/source/layouts/header.slim
@@ -12,4 +12,4 @@ nav.nav
     li =link_to "all", "/"
     - blog.tags.each do |tag, articles|
       li =link_to tag, tag_path(tag)
-    li =link_to "author", "/author/"
+    li =link_to "about", "/about.html"
