--- a/source/stylesheets/_layout.sass
+++ b/source/stylesheets/_layout.sass
@@ -53,6 +53,7 @@ a
     display: none
 
     li
+      font-size: 11px
       width: 100%
       height: 50px
       letter-spacing: 0.15em
@@ -65,20 +66,18 @@ a
         padding-right: 40px
         display: block
 
-.page,
-.blog
-  .header
-    +container
-    height: 250px
-    padding-top: 90px
+.header
+  +container
+  height: 250px
+  padding-top: 90px
 
-    .logo
-      a
-        +hover
+  .logo
+    a
+      +hover
 
-        img
-          width: 56px
-          height: 50px
+      img
+        width: 56px
+        height: 50px
 
 .container
   +container
@@ -122,17 +121,15 @@ a
     .copyright
       font-size: 8px
 
-  .page,
-  .blog
-    .header
-      height: 90px
-      padding: 29px 30px 0
+  .header
+    height: 90px
+    padding: 29px 30px 0
 
-      .logo
-        a
-          img
-            width: 34px
-            height: 30px
+    .logo
+      a
+        img
+          width: 34px
+          height: 30px
 
-    .container
-      margin-top: 30px
+  .container
+    margin-top: 30px
