記事をMarkdownにしてインポート

--- a/source/stylesheets/_blog.sass
+++ b/source/stylesheets/_blog.sass
@@ -7,7 +7,7 @@
 
     img
       width: 100%
-      max-width: 960px
+      max-width: 800px
 
   .container
     .article
@@ -48,7 +48,6 @@
         margin: -8px 0 50 - 8px
 
       img
-        width: 100%
         padding: 8px 0 10px
         display: block
 
@@ -151,6 +150,9 @@
 
         p
           margin-bottom: 40 - 8px
+
+        img
+          width: 100%
 
         blockquote
           padding: 20px
