--- a/source/stylesheets/_index.sass
+++ b/source/stylesheets/_index.sass
@@ -30,16 +30,17 @@
 
       .article
         margin-bottom: 100px
-        padding-top: 11 + 12px
+        padding-top: 12 + 12px
         position: relative
        
         .title
           font-size: 18px
           font-family: "A-OTF 見出ゴMB31 Pro", sans-serif
+          //font-family: "見出ゴMB1", "Midashi Go MB1", sans-serif
           font-weight: bold
           text-align: left
-          //font-family: "見出ゴMB1", "Midashi Go MB1", sans-serif
-          margin-bottom: 40px
+          line-height: 1.5
+          margin: -5px 0 40 - 5px
 
           a
             +hover
@@ -118,11 +119,11 @@
         .article
           margin-bottom: 60px
 
+          .title
+            font-size: 16px
+
           .date
             font-size: 10px
-
-          .title
-            font-size: 18px
 
           .txt
             font-size: 12px
