--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -1,37 +1,12 @@
 doctype html
-html lang="ja"
+html
   head
-    meta charset="utf-8"
-    meta http-equiv="Content-Language" content="ja"
-
-    title
-      == current_article.title + ' | ' unless current_article.nil?
-      | 誠
-
-    meta name="keywords" content=""
-    meta name="description" content=""
-
-    meta property="og:title" content=""
-    meta property="og:type" content="website"
-    meta property="og:url" content=""
-    meta property="og:description" content=""
-    meta property="og:site_name" content=""
-    meta property="og:image" content=""
-    meta property="og:locale" content="ja_JP"
-    meta property="fb:app_id" content=""
-
-    meta name="viewport" content="width=device-width, user-scalable=no"
-
-    == stylesheet_link_tag "style"
-    == javascript_include_tag "all"
-    / script type="text/javascript" src="//typesquare.com/accessor/script/typesquare.js?xVSRN9-Pcws%3D" charset="utf-8"
-
-    / == feed_tag :atom, "#{blog.options.prefix.to_s}/feed.xml", title: "Atom Feed"
+    = partial "layouts/_meta"
 
   body class=[page_classes]
-    = partial "layouts/header"
+    = partial "layouts/_header"
 
     .container
       = yield
 
-    = partial "layouts/footer"
+    = partial "layouts/_footer"
