--- a/source/stylesheets/_about.sass
+++ b/source/stylesheets/_about.sass
@@ -4,8 +4,7 @@
   .container
     .title
       font-size: 22px
-      font-family: "A-OTF 見出ゴMB31 Pro", sans-serif
-      // font-family: "見出ゴMB1", "Midashi Go MB1", sans-serif
+      font-family: "見出ゴMB1", "Midashi Go MB1", sans-serif
       font-weight: bold
       letter-spacing: 0.3em
       text-align: center
