--- a/source/layouts/blog.slim
+++ b/source/layouts/blog.slim
@@ -1,10 +1,10 @@
 doctype html
 html lang="ja"
   head
-    = partial "layouts/_meta"
+    = partial "meta"
 
   body class=[page_classes]
-    = partial "layouts/_header"
+    = partial "header"
 
     - if current_article.data.visual
       figure.visual
@@ -35,4 +35,4 @@ html lang="ja"
           erb:
             <a href="http://b.hatena.ne.jp/entry/www.daisukenagai.com/blog/<%= current_article.slug %>" class="hatena-bookmark-button" data-hatena-bookmark-title="<%= current_article.title %>" data-hatena-bookmark-layout="simple" data-hatena-bookmark-lang="ja" title="このエントリーをはてなブックマークに追加"><img src="http://b.st-hatena.com/images/entry-button/button-only@2x.png" alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;" /></a><script type="text/javascript" src="http://b.st-hatena.com/js/bookmark_button.js" charset="utf-8" async="async"></script>
     
-    = partial "layouts/_footer"
+    = partial "footer"
