--- a/source/stylesheets/_blog.sass
+++ b/source/stylesheets/_blog.sass
@@ -17,11 +17,11 @@
 
       .title
         font-size: 22px
-        font-family: "A-OTF 見出ゴMB31 Pro", sans-serif
-        // font-family: "見出ゴMB1", "Midashi Go MB1", sans-serif
+        font-family: "見出ゴMB1", "Midashi Go MB1", sans-serif
         font-weight: bold
-        text-align: center
         line-height: 1.5
+        letter-spacing: 0.05em
+        text-align: center
         margin: -6px 0 100 - 6px
 
       .date
