--- a/source/stylesheets/_index.sass
+++ b/source/stylesheets/_index.sass
@@ -35,11 +35,11 @@
        
         .title
           font-size: 18px
-          font-family: "A-OTF 見出ゴMB31 Pro", sans-serif
-          //font-family: "見出ゴMB1", "Midashi Go MB1", sans-serif
+          font-family: "見出ゴMB1", "Midashi Go MB1", sans-serif
           font-weight: bold
-          text-align: left
           line-height: 1.5
+          letter-spacing: 0.05em
+          text-align: left
           margin: -5px 0 40 - 5px
 
           a
