--- a/source/stylesheets/_mixin.sass
+++ b/source/stylesheets/_mixin.sass
@@ -29,10 +29,10 @@
 
 =hover
   +mediaquery-pc
-    transition: opacity 0.5s $easeOutQuart
-    opacity: 1
+    transition: opacity 0.5s $easeOutQuart !important
+    opacity: 1 !important
 
     &:hover
-      transition: opacity 0.1s $easeOutQuart
-      opacity: 0.25
+      transition: opacity 0.1s $easeOutQuart !important
+      opacity: 0.25 !important
     
