--- a/source/stylesheets/_index.sass
+++ b/source/stylesheets/_index.sass
@@ -58,7 +58,7 @@
           font-size: 13px
           line-height: 2
           text-align: justify
-          height: 80px
+          max-height: 80px
           margin: -6px 0
           overflow: hidden
 
@@ -127,7 +127,7 @@
 
           .txt
             font-size: 12px
-            height: 70px
+            max-height: 70px
 
       .pagenate
         margin-bottom: 100px
