「レイヤーを選択範囲に整列」は信用してはいけない

--- a/source/partials/_meta.slim
+++ b/source/partials/_meta.slim
@@ -21,7 +21,7 @@ meta property="og:image" content="http://daisukenagai.com/images/og.png"
 meta property="og:locale" content="ja_JP"
 meta property="fb:app_id" content="348456995219440"
 
-meta name="viewport" content="width=device-width, user-scalable=no"
+meta name="viewport" content="width=device-width"
 
 == stylesheet_link_tag "style"
 == javascript_include_tag "all"
