iMacの内蔵HDDからデータを救出するためにやったこと

--- a/source/stylesheets/_blog.sass
+++ b/source/stylesheets/_blog.sass
@@ -112,6 +112,15 @@
 
       .twitter-tweet
         margin-bottom: 45px !important
+
+      .amazon
+        text-align: center
+        background: #fff
+        padding: 30px 40px 40px
+
+        img
+          margin-bottom: 20px
+          display: inline
       
     .share
       text-align: center
