iMac Retina 5Kがやってきた

--- a/source/stylesheets/_blog.sass
+++ b/source/stylesheets/_blog.sass
@@ -39,8 +39,17 @@
         font-weight: bold
         margin: 80 - 5px 0 40 - 5px
 
+      h4
+        font-size: 15px
+        line-height: 1.5
+        font-weight: bold
+        margin: -4px 0 40 - 4px
+
       p + h3
         margin-top: 80 - 5 - 8px
+
+      p + h4
+        margin-top: 60 - 5 - 8px
 
       p
         font-size: 13px
@@ -166,6 +175,13 @@
 
         p + h3
           margin-top: 60 - 5 - 8px
+
+        h4
+          font-size: 14px
+          margin: 0 0 30 - 5px
+
+        p + h4
+          margin-top: 40 - 5 - 8px
 
         p
           margin-bottom: 30 - 8px
