--- a/source/stylesheets/_blog.sass
+++ b/source/stylesheets/_blog.sass
@@ -63,7 +63,7 @@
       img
         padding: 8px 0 10px
         max-width: 800px
-        display: block
+        display: inline-block
 
       a
         text-decoration: underline
@@ -130,6 +130,14 @@
         img
           margin-bottom: 20px
           display: inline
+
+      iframe
+        width: 800px
+        height: 450px
+        margin-bottom: 40px
+
+      embed
+        margin-bottom: 40px
       
     .share
       text-align: center
@@ -206,6 +214,16 @@
 
         .twitter-tweet
           margin-bottom: 35px !important
+
+        iframe
+          width: 100%
+          height: auto
+          margin-bottom: 30px
+
+        embed
+          width: 100%
+          height: auto
+          margin-bottom: 30px
 
       .share
         margin-bottom: 100px
